Add maximum and minimum sidebar pane position

Related to: https://bugzilla.gnome.org/show_bug.cgi?id=668779